Markdown-HTML-Compiler/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> statement
Rule 2     statement -> segment
Rule 3     statement -> statement EM subseg CR segment
Rule 4     statement -> statement TABSTAR segment CR TABSTAR segment CR segment
Rule 5     statement -> statement MULICODE segment MULICODE segment
Rule 6     subseg -> segment
Rule 7     subseg -> subseg TABSTAR subsubseg
Rule 8     subsubseg -> segment
Rule 9     subsubseg -> subsubseg TABTABSTAR subsubsubseg CR TABTABSTAR subsubsubseg
Rule 10    subsubsubseg -> list
Rule 11    segment -> expression
Rule 12    segment -> segment CR ARIGHT list CR ARIGHT list
Rule 13    segment -> segment CR expression
Rule 14    segment -> segment CR
Rule 15    segment -> CR expression
Rule 16    segment -> CR
Rule 17    list -> factor
Rule 18    list -> HR
Rule 19    expression -> H1 factor
Rule 20    expression -> H2 factor
Rule 21    expression -> H3 factor
Rule 22    expression -> LI factor
Rule 23    expression -> HR
Rule 24    expression -> BR
Rule 25    expression -> factor
Rule 26    factor -> factor STRONG term STRONG term
Rule 27    factor -> STRONG term STRONG term
Rule 28    factor -> factor EM term EM term
Rule 29    factor -> factor CODE term CODE term
Rule 30    factor -> factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
Rule 31    factor -> IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
Rule 32    factor -> factor CODE EM term EM CODE term
Rule 33    factor -> ALEFT term ARIGHT
Rule 34    factor -> term
Rule 35    term -> letter
Rule 36    letter -> TEXT

Terminals, with rules where they appear

ALEFT                : 33
ALINKLEFT            : 30 31
ALINKRIGHT           : 30 31
ARIGHT               : 12 12 33
ATITLELEFT           : 30 31
ATITLERIGHT          : 30 31
BR                   : 24
CODE                 : 29 29 32 32
CR                   : 3 4 4 9 12 12 13 14 15 16
EM                   : 3 28 28 32 32
H1                   : 19
H2                   : 20
H3                   : 21
HR                   : 18 23
IMG                  : 31
LI                   : 22
MULICODE             : 5 5
STRONG               : 26 26 27 27
TABSTAR              : 4 4 7
TABTABSTAR           : 9 9
TEXT                 : 36
error                : 

Nonterminals, with rules where they appear

body                 : 0
expression           : 11 13 15
factor               : 17 19 20 21 22 25 26 28 29 30 32
letter               : 35
list                 : 10 12 12
segment              : 2 3 4 4 4 5 5 6 8 12 13 14
statement            : 1 3 4 5
subseg               : 3 7
subsubseg            : 7 9
subsubsubseg         : 9 9
term                 : 26 26 27 27 28 28 29 29 30 30 30 31 31 32 32 33 34

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . statement
    (2) statement -> . segment
    (3) statement -> . statement EM subseg CR segment
    (4) statement -> . statement TABSTAR segment CR TABSTAR segment CR segment
    (5) statement -> . statement MULICODE segment MULICODE segment
    (11) segment -> . expression
    (12) segment -> . segment CR ARIGHT list CR ARIGHT list
    (13) segment -> . segment CR expression
    (14) segment -> . segment CR
    (15) segment -> . CR expression
    (16) segment -> . CR
    (19) expression -> . H1 factor
    (20) expression -> . H2 factor
    (21) expression -> . H3 factor
    (22) expression -> . LI factor
    (23) expression -> . HR
    (24) expression -> . BR
    (25) expression -> . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    CR              shift and go to state 12
    H1              shift and go to state 17
    H2              shift and go to state 15
    H3              shift and go to state 16
    LI              shift and go to state 6
    HR              shift and go to state 2
    BR              shift and go to state 4
    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    body                           shift and go to state 9
    term                           shift and go to state 14
    letter                         shift and go to state 11
    segment                        shift and go to state 13
    statement                      shift and go to state 7
    factor                         shift and go to state 8
    expression                     shift and go to state 18

state 1

    (33) factor -> ALEFT . term ARIGHT
    (35) term -> . letter
    (36) letter -> . TEXT

    TEXT            shift and go to state 3

    term                           shift and go to state 19
    letter                         shift and go to state 11

state 2

    (23) expression -> HR .

    CR              reduce using rule 23 (expression -> HR .)
    TABSTAR         reduce using rule 23 (expression -> HR .)
    EM              reduce using rule 23 (expression -> HR .)
    MULICODE        reduce using rule 23 (expression -> HR .)
    $end            reduce using rule 23 (expression -> HR .)
    TABTABSTAR      reduce using rule 23 (expression -> HR .)


state 3

    (36) letter -> TEXT .

    STRONG          reduce using rule 36 (letter -> TEXT .)
    EM              reduce using rule 36 (letter -> TEXT .)
    CODE            reduce using rule 36 (letter -> TEXT .)
    ATITLELEFT      reduce using rule 36 (letter -> TEXT .)
    CR              reduce using rule 36 (letter -> TEXT .)
    TABSTAR         reduce using rule 36 (letter -> TEXT .)
    MULICODE        reduce using rule 36 (letter -> TEXT .)
    $end            reduce using rule 36 (letter -> TEXT .)
    TABTABSTAR      reduce using rule 36 (letter -> TEXT .)
    ALINKRIGHT      reduce using rule 36 (letter -> TEXT .)
    ATITLERIGHT     reduce using rule 36 (letter -> TEXT .)
    ARIGHT          reduce using rule 36 (letter -> TEXT .)


state 4

    (24) expression -> BR .

    CR              reduce using rule 24 (expression -> BR .)
    TABSTAR         reduce using rule 24 (expression -> BR .)
    EM              reduce using rule 24 (expression -> BR .)
    MULICODE        reduce using rule 24 (expression -> BR .)
    $end            reduce using rule 24 (expression -> BR .)
    TABTABSTAR      reduce using rule 24 (expression -> BR .)


state 5

    (27) factor -> STRONG . term STRONG term
    (35) term -> . letter
    (36) letter -> . TEXT

    TEXT            shift and go to state 3

    term                           shift and go to state 20
    letter                         shift and go to state 11

state 6

    (22) expression -> LI . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    letter                         shift and go to state 11
    factor                         shift and go to state 21

state 7

    (1) body -> statement .
    (3) statement -> statement . EM subseg CR segment
    (4) statement -> statement . TABSTAR segment CR TABSTAR segment CR segment
    (5) statement -> statement . MULICODE segment MULICODE segment

    $end            reduce using rule 1 (body -> statement .)
    EM              shift and go to state 22
    TABSTAR         shift and go to state 24
    MULICODE        shift and go to state 23


state 8

    (25) expression -> factor .
    (26) factor -> factor . STRONG term STRONG term
    (28) factor -> factor . EM term EM term
    (29) factor -> factor . CODE term CODE term
    (30) factor -> factor . ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (32) factor -> factor . CODE EM term EM CODE term

  ! shift/reduce conflict for EM resolved as shift
    CR              reduce using rule 25 (expression -> factor .)
    TABSTAR         reduce using rule 25 (expression -> factor .)
    MULICODE        reduce using rule 25 (expression -> factor .)
    $end            reduce using rule 25 (expression -> factor .)
    TABTABSTAR      reduce using rule 25 (expression -> factor .)
    STRONG          shift and go to state 28
    EM              shift and go to state 25
    CODE            shift and go to state 26
    ATITLELEFT      shift and go to state 27

  ! EM              [ reduce using rule 25 (expression -> factor .) ]


state 9

    (0) S' -> body .



state 10

    (31) factor -> IMG . ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT

    ATITLELEFT      shift and go to state 29


state 11

    (35) term -> letter .

    STRONG          reduce using rule 35 (term -> letter .)
    EM              reduce using rule 35 (term -> letter .)
    CODE            reduce using rule 35 (term -> letter .)
    ATITLELEFT      reduce using rule 35 (term -> letter .)
    CR              reduce using rule 35 (term -> letter .)
    TABSTAR         reduce using rule 35 (term -> letter .)
    MULICODE        reduce using rule 35 (term -> letter .)
    $end            reduce using rule 35 (term -> letter .)
    TABTABSTAR      reduce using rule 35 (term -> letter .)
    ATITLERIGHT     reduce using rule 35 (term -> letter .)
    ARIGHT          reduce using rule 35 (term -> letter .)
    ALINKRIGHT      reduce using rule 35 (term -> letter .)


state 12

    (15) segment -> CR . expression
    (16) segment -> CR .
    (19) expression -> . H1 factor
    (20) expression -> . H2 factor
    (21) expression -> . H3 factor
    (22) expression -> . LI factor
    (23) expression -> . HR
    (24) expression -> . BR
    (25) expression -> . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    CR              reduce using rule 16 (segment -> CR .)
    EM              reduce using rule 16 (segment -> CR .)
    TABSTAR         reduce using rule 16 (segment -> CR .)
    MULICODE        reduce using rule 16 (segment -> CR .)
    $end            reduce using rule 16 (segment -> CR .)
    TABTABSTAR      reduce using rule 16 (segment -> CR .)
    H1              shift and go to state 17
    H2              shift and go to state 15
    H3              shift and go to state 16
    LI              shift and go to state 6
    HR              shift and go to state 2
    BR              shift and go to state 4
    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    expression                     shift and go to state 30
    letter                         shift and go to state 11
    factor                         shift and go to state 8

state 13

    (2) statement -> segment .
    (12) segment -> segment . CR ARIGHT list CR ARIGHT list
    (13) segment -> segment . CR expression
    (14) segment -> segment . CR

    EM              reduce using rule 2 (statement -> segment .)
    TABSTAR         reduce using rule 2 (statement -> segment .)
    MULICODE        reduce using rule 2 (statement -> segment .)
    $end            reduce using rule 2 (statement -> segment .)
    CR              shift and go to state 31


state 14

    (34) factor -> term .

    STRONG          reduce using rule 34 (factor -> term .)
    EM              reduce using rule 34 (factor -> term .)
    CODE            reduce using rule 34 (factor -> term .)
    ATITLELEFT      reduce using rule 34 (factor -> term .)
    CR              reduce using rule 34 (factor -> term .)
    TABSTAR         reduce using rule 34 (factor -> term .)
    MULICODE        reduce using rule 34 (factor -> term .)
    $end            reduce using rule 34 (factor -> term .)
    TABTABSTAR      reduce using rule 34 (factor -> term .)


state 15

    (20) expression -> H2 . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    letter                         shift and go to state 11
    factor                         shift and go to state 32

state 16

    (21) expression -> H3 . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    letter                         shift and go to state 11
    factor                         shift and go to state 33

state 17

    (19) expression -> H1 . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    letter                         shift and go to state 11
    factor                         shift and go to state 34

state 18

    (11) segment -> expression .

    CR              reduce using rule 11 (segment -> expression .)
    EM              reduce using rule 11 (segment -> expression .)
    TABSTAR         reduce using rule 11 (segment -> expression .)
    MULICODE        reduce using rule 11 (segment -> expression .)
    $end            reduce using rule 11 (segment -> expression .)
    TABTABSTAR      reduce using rule 11 (segment -> expression .)


state 19

    (33) factor -> ALEFT term . ARIGHT

    ARIGHT          shift and go to state 35


state 20

    (27) factor -> STRONG term . STRONG term

    STRONG          shift and go to state 36


state 21

    (22) expression -> LI factor .
    (26) factor -> factor . STRONG term STRONG term
    (28) factor -> factor . EM term EM term
    (29) factor -> factor . CODE term CODE term
    (30) factor -> factor . ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (32) factor -> factor . CODE EM term EM CODE term

  ! shift/reduce conflict for EM resolved as shift
    CR              reduce using rule 22 (expression -> LI factor .)
    TABSTAR         reduce using rule 22 (expression -> LI factor .)
    MULICODE        reduce using rule 22 (expression -> LI factor .)
    $end            reduce using rule 22 (expression -> LI factor .)
    TABTABSTAR      reduce using rule 22 (expression -> LI factor .)
    STRONG          shift and go to state 28
    EM              shift and go to state 25
    CODE            shift and go to state 26
    ATITLELEFT      shift and go to state 27

  ! EM              [ reduce using rule 22 (expression -> LI factor .) ]


state 22

    (3) statement -> statement EM . subseg CR segment
    (6) subseg -> . segment
    (7) subseg -> . subseg TABSTAR subsubseg
    (11) segment -> . expression
    (12) segment -> . segment CR ARIGHT list CR ARIGHT list
    (13) segment -> . segment CR expression
    (14) segment -> . segment CR
    (15) segment -> . CR expression
    (16) segment -> . CR
    (19) expression -> . H1 factor
    (20) expression -> . H2 factor
    (21) expression -> . H3 factor
    (22) expression -> . LI factor
    (23) expression -> . HR
    (24) expression -> . BR
    (25) expression -> . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    CR              shift and go to state 12
    H1              shift and go to state 17
    H2              shift and go to state 15
    H3              shift and go to state 16
    LI              shift and go to state 6
    HR              shift and go to state 2
    BR              shift and go to state 4
    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    letter                         shift and go to state 11
    segment                        shift and go to state 38
    subseg                         shift and go to state 37
    factor                         shift and go to state 8
    expression                     shift and go to state 18

state 23

    (5) statement -> statement MULICODE . segment MULICODE segment
    (11) segment -> . expression
    (12) segment -> . segment CR ARIGHT list CR ARIGHT list
    (13) segment -> . segment CR expression
    (14) segment -> . segment CR
    (15) segment -> . CR expression
    (16) segment -> . CR
    (19) expression -> . H1 factor
    (20) expression -> . H2 factor
    (21) expression -> . H3 factor
    (22) expression -> . LI factor
    (23) expression -> . HR
    (24) expression -> . BR
    (25) expression -> . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    CR              shift and go to state 12
    H1              shift and go to state 17
    H2              shift and go to state 15
    H3              shift and go to state 16
    LI              shift and go to state 6
    HR              shift and go to state 2
    BR              shift and go to state 4
    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    letter                         shift and go to state 11
    segment                        shift and go to state 39
    factor                         shift and go to state 8
    expression                     shift and go to state 18

state 24

    (4) statement -> statement TABSTAR . segment CR TABSTAR segment CR segment
    (11) segment -> . expression
    (12) segment -> . segment CR ARIGHT list CR ARIGHT list
    (13) segment -> . segment CR expression
    (14) segment -> . segment CR
    (15) segment -> . CR expression
    (16) segment -> . CR
    (19) expression -> . H1 factor
    (20) expression -> . H2 factor
    (21) expression -> . H3 factor
    (22) expression -> . LI factor
    (23) expression -> . HR
    (24) expression -> . BR
    (25) expression -> . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    CR              shift and go to state 12
    H1              shift and go to state 17
    H2              shift and go to state 15
    H3              shift and go to state 16
    LI              shift and go to state 6
    HR              shift and go to state 2
    BR              shift and go to state 4
    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    letter                         shift and go to state 11
    segment                        shift and go to state 40
    factor                         shift and go to state 8
    expression                     shift and go to state 18

state 25

    (28) factor -> factor EM . term EM term
    (35) term -> . letter
    (36) letter -> . TEXT

    TEXT            shift and go to state 3

    term                           shift and go to state 41
    letter                         shift and go to state 11

state 26

    (29) factor -> factor CODE . term CODE term
    (32) factor -> factor CODE . EM term EM CODE term
    (35) term -> . letter
    (36) letter -> . TEXT

    EM              shift and go to state 42
    TEXT            shift and go to state 3

    term                           shift and go to state 43
    letter                         shift and go to state 11

state 27

    (30) factor -> factor ATITLELEFT . term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (35) term -> . letter
    (36) letter -> . TEXT

    TEXT            shift and go to state 3

    term                           shift and go to state 44
    letter                         shift and go to state 11

state 28

    (26) factor -> factor STRONG . term STRONG term
    (35) term -> . letter
    (36) letter -> . TEXT

    TEXT            shift and go to state 3

    term                           shift and go to state 45
    letter                         shift and go to state 11

state 29

    (31) factor -> IMG ATITLELEFT . term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (35) term -> . letter
    (36) letter -> . TEXT

    TEXT            shift and go to state 3

    term                           shift and go to state 46
    letter                         shift and go to state 11

state 30

    (15) segment -> CR expression .

    CR              reduce using rule 15 (segment -> CR expression .)
    EM              reduce using rule 15 (segment -> CR expression .)
    TABSTAR         reduce using rule 15 (segment -> CR expression .)
    MULICODE        reduce using rule 15 (segment -> CR expression .)
    $end            reduce using rule 15 (segment -> CR expression .)
    TABTABSTAR      reduce using rule 15 (segment -> CR expression .)


state 31

    (12) segment -> segment CR . ARIGHT list CR ARIGHT list
    (13) segment -> segment CR . expression
    (14) segment -> segment CR .
    (19) expression -> . H1 factor
    (20) expression -> . H2 factor
    (21) expression -> . H3 factor
    (22) expression -> . LI factor
    (23) expression -> . HR
    (24) expression -> . BR
    (25) expression -> . factor
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    ARIGHT          shift and go to state 47
    CR              reduce using rule 14 (segment -> segment CR .)
    EM              reduce using rule 14 (segment -> segment CR .)
    TABSTAR         reduce using rule 14 (segment -> segment CR .)
    MULICODE        reduce using rule 14 (segment -> segment CR .)
    $end            reduce using rule 14 (segment -> segment CR .)
    TABTABSTAR      reduce using rule 14 (segment -> segment CR .)
    H1              shift and go to state 17
    H2              shift and go to state 15
    H3              shift and go to state 16
    LI              shift and go to state 6
    HR              shift and go to state 2
    BR              shift and go to state 4
    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    term                           shift and go to state 14
    expression                     shift and go to state 48
    letter                         shift and go to state 11
    factor                         shift and go to state 8

state 32

    (20) expression -> H2 factor .
    (26) factor -> factor . STRONG term STRONG term
    (28) factor -> factor . EM term EM term
    (29) factor -> factor . CODE term CODE term
    (30) factor -> factor . ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (32) factor -> factor . CODE EM term EM CODE term

  ! shift/reduce conflict for EM resolved as shift
    CR              reduce using rule 20 (expression -> H2 factor .)
    TABSTAR         reduce using rule 20 (expression -> H2 factor .)
    MULICODE        reduce using rule 20 (expression -> H2 factor .)
    $end            reduce using rule 20 (expression -> H2 factor .)
    TABTABSTAR      reduce using rule 20 (expression -> H2 factor .)
    STRONG          shift and go to state 28
    EM              shift and go to state 25
    CODE            shift and go to state 26
    ATITLELEFT      shift and go to state 27

  ! EM              [ reduce using rule 20 (expression -> H2 factor .) ]


state 33

    (21) expression -> H3 factor .
    (26) factor -> factor . STRONG term STRONG term
    (28) factor -> factor . EM term EM term
    (29) factor -> factor . CODE term CODE term
    (30) factor -> factor . ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (32) factor -> factor . CODE EM term EM CODE term

  ! shift/reduce conflict for EM resolved as shift
    CR              reduce using rule 21 (expression -> H3 factor .)
    TABSTAR         reduce using rule 21 (expression -> H3 factor .)
    MULICODE        reduce using rule 21 (expression -> H3 factor .)
    $end            reduce using rule 21 (expression -> H3 factor .)
    TABTABSTAR      reduce using rule 21 (expression -> H3 factor .)
    STRONG          shift and go to state 28
    EM              shift and go to state 25
    CODE            shift and go to state 26
    ATITLELEFT      shift and go to state 27

  ! EM              [ reduce using rule 21 (expression -> H3 factor .) ]


state 34

    (19) expression -> H1 factor .
    (26) factor -> factor . STRONG term STRONG term
    (28) factor -> factor . EM term EM term
    (29) factor -> factor . CODE term CODE term
    (30) factor -> factor . ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (32) factor -> factor . CODE EM term EM CODE term

  ! shift/reduce conflict for EM resolved as shift
    CR              reduce using rule 19 (expression -> H1 factor .)
    TABSTAR         reduce using rule 19 (expression -> H1 factor .)
    MULICODE        reduce using rule 19 (expression -> H1 factor .)
    $end            reduce using rule 19 (expression -> H1 factor .)
    TABTABSTAR      reduce using rule 19 (expression -> H1 factor .)
    STRONG          shift and go to state 28
    EM              shift and go to state 25
    CODE            shift and go to state 26
    ATITLELEFT      shift and go to state 27

  ! EM              [ reduce using rule 19 (expression -> H1 factor .) ]


state 35

    (33) factor -> ALEFT term ARIGHT .

    STRONG          reduce using rule 33 (factor -> ALEFT term ARIGHT .)
    EM              reduce using rule 33 (factor -> ALEFT term ARIGHT .)
    CODE            reduce using rule 33 (factor -> ALEFT term ARIGHT .)
    ATITLELEFT      reduce using rule 33 (factor -> ALEFT term ARIGHT .)
    CR              reduce using rule 33 (factor -> ALEFT term ARIGHT .)
    TABSTAR         reduce using rule 33 (factor -> ALEFT term ARIGHT .)
    MULICODE        reduce using rule 33 (factor -> ALEFT term ARIGHT .)
    $end            reduce using rule 33 (factor -> ALEFT term ARIGHT .)
    TABTABSTAR      reduce using rule 33 (factor -> ALEFT term ARIGHT .)


state 36

    (27) factor -> STRONG term STRONG . term
    (35) term -> . letter
    (36) letter -> . TEXT

    TEXT            shift and go to state 3

    term                           shift and go to state 49
    letter                         shift and go to state 11

state 37

    (3) statement -> statement EM subseg . CR segment
    (7) subseg -> subseg . TABSTAR subsubseg

    CR              shift and go to state 51
    TABSTAR         shift and go to state 50


state 38

    (6) subseg -> segment .
    (12) segment -> segment . CR ARIGHT list CR ARIGHT list
    (13) segment -> segment . CR expression
    (14) segment -> segment . CR

  ! shift/reduce conflict for CR resolved as shift
    TABSTAR         reduce using rule 6 (subseg -> segment .)
    CR              shift and go to state 31

  ! CR              [ reduce using rule 6 (subseg -> segment .) ]


state 39

    (5) statement -> statement MULICODE segment . MULICODE segment
    (12) segment -> segment . CR ARIGHT list CR ARIGHT list
    (13) segment -> segment . CR expression
    (14) segment -> segment . CR

    MULICODE        shift and go to state 52
    CR              shift and go to state 31


state 40

    (4) statement -> statement TABSTAR segment . CR TABSTAR segment CR segment
    (12) segment -> segment . CR ARIGHT list CR ARIGHT list
    (13) segment -> segment . CR expression
    (14) segment -> segment . CR

    CR              shift and go to state 53


state 41

    (28) factor -> factor EM term . EM term

    EM              shift and go to state 54


state 42

    (32) factor -> factor CODE EM . term EM CODE term
    (35) term -> . letter
    (36) letter -> . TEXT

    TEXT            shift and go to state 3

    term                           shift and go to state 55
    letter                         shift and go to state 11

state 43

    (29) factor -> factor CODE term . CODE term

    CODE            shift and go to state 56


state 44

    (30) factor -> factor ATITLELEFT term . ATITLERIGHT ALINKLEFT term ALINKRIGHT term

    ATITLERIGHT     shift and go to state 57


state 45

    (26) factor -> factor STRONG term . STRONG term

    STRONG          shift and go to state 58


state 46

    (31) factor -> IMG ATITLELEFT term . ATITLERIGHT ALINKLEFT term ALINKRIGHT

    ATITLERIGHT     shift and go to state 59


state 47

    (12) segment -> segment CR ARIGHT . list CR ARIGHT list
    (17) list -> . factor
    (18) list -> . HR
    (26) factor -> . factor STRONG term STRONG term
    (27) factor -> . STRONG term STRONG term
    (28) factor -> . factor EM term EM term
    (29) factor -> . factor CODE term CODE term
    (30) factor -> . factor ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT term
    (31) factor -> . IMG ATITLELEFT term ATITLERIGHT ALINKLEFT term ALINKRIGHT
    (32) factor -> . factor CODE EM term EM CODE term
    (33) factor -> . ALEFT term ARIGHT
    (34) factor -> . term
    (35) term -> . letter
    (36) letter -> . TEXT

    HR              shift and go to state 60
    STRONG          shift and go to state 5
    IMG             shift and go to state 10
    ALEFT           shift and go to state 1
    TEXT            shift and go to state 3

    list                           shift and go to state 61
    term                           shift and go to state 14
    letter                         shift and go to state 11
    factor                         shift and go to state 62

state 48

    (13) segment -> segment CR expression .

    CR              reduce using rule 13 (segment -> segment CR expression .)
    EM              reduce using rule 13 (segment -> segment CR expression .)
    TABSTAR         reduce using rule 13 (segment -> segment CR expression .)
    MULICODE        reduce using rule 13 (segment -> segment CR expression .)
    $end            reduce using rule 13 (segment -> segment CR expression .)
    TABTABSTAR      reduce using rule 13 (segment -> segment CR expression .)


state 49

    (27) factor -> STRONG term STRONG term .

    STRONG          reduce using rule 27 (factor -> STRONG term STRONG term .)
    EM              reduce using rule 27 (factor -> STRONG term STRONG term .)
    CODE            reduce using rule 27 (factor -> STRONG term STRONG term .)
    ATITLELEFT      reduce using rule 27 (factor -> STRONG term STRONG term .)
    CR              reduce using rule 27 (factor -> STRONG term STRONG term .)
    TABSTAR         reduce using rule 27 (factor -> STRONG term STRONG term .)
    MULICODE        reduce using rule 27 (factor -> STRONG term STRONG term .)
    $end            reduce using rule 27 (factor -> STRONG term STRONG term .)
    TABTABSTAR      reduce using rule 27 (factor -> STRONG term STRONG term .)


state 50
